--- a/static/main.css
+++ b/static/main.css
@@ -1,4 +1,36 @@
-body {
-	background-color: #BAD;
-	color: #C0FFEE;
+* {
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
+
+body {
+	margin-left: auto;
+	margin-right: auto;
+	width: 80%;
+
+	font-family: 'Work Sans';
+	font-weight: 300;
+	color: #333;
+}
+
+input[type="text"] {
+	margin-left: 5%;
+	margin-right: 5%; 
+	width: 65%;
+
+	background: linear-gradient(to top, #C0FFEE, #fff);
+	box-shadow: inset 0 0 2px #C0FFEE, 0 0 10px #C0FFEE;
+	border: 0;
+}
+
+input[type="submit"] {
+	margin-right: 5%;
+	width: 20%;
+	
+	background-color: #EEF;
+	color: #333;
+	border: 0;
+	box-shadow: inset 0 0 20px #C0FFEE, 0 0 20px #C0FFEE;
+}
+
